@startuml class-diagram-ana-seguranca

class Company {
  +id: int
  +name: string
  +cnpj: string
}

class Control {
  +id: int
  +module: string
  +code: string
  +title: string
  +category: string
  +catalog_version: string
}

class Audit {
  +id: int
  +company_id: int
  +module: string
  +audit_date: date
  +status: string
  +finished_at: datetime
}

class AuditResponse {
  +id: int
  +audit_id: int
  +control_id: int
  +status: string
  +work_in_progress: bool
}

class ComplianceService {
  +calculate_percent()
  +summarize_responses()
  +summarize_by_category()
}

class AuditService {
  +create_audit()
  +register_response()
  +finish_audit()
  +get_dashboard()
  +get_comparison()
}

class ReportService {
  +generate_html()
}

Company "1" -- "*" Audit
Audit "1" -- "*" AuditResponse
Control "1" -- "*" AuditResponse
AuditService ..> ComplianceService
ReportService ..> AuditService
ReportService ..> ComplianceService

@enduml
